# tprobe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml
examples/tp_pc/: band_table.rs  main.rs
notes/: cycle-protocol.md  design.md  todo.md  tp-pc-abba-300s-2026-07-12.txt  tp-pc-abba-300s-c23-3900x-2026-07-12.txt  tp-pc-abba-300s-r2-2026-07-12.txt  tp-pc-pairs-60s-c23-3900x-2026-07-12.txt  tp-pc-pairs-60s-c45-3900x-2026-07-12.txt  tp-pc-pairs-6s-c23-3900x-2026-07-12.txt  tp-pc-pairs-6s-c45-3900x-2026-07-12.txt
notes/chores/: chores-01.md
scripts/: known_hosts-3900x  ssh-3900x.sh  tp-pc-cmp.sh
src/: lib.rs  probe.rs  recorder.rs  ticks.rs
src/ticks/: aarch64.rs  x86_64.rs
