# no_std-first hardware tick-counter measurement probe.
# Consolidates four drifted copies (actor-x1, zc-ring-x1,
# iiac-perf, prospectively zc-msg-x1) into one crate; see
# notes/design.md for the founding rationale.
[package]
name = "tprobe"
version = "0.1.0-4"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
description = "no_std-first hardware tick-counter measurement probe"
publish = false

[features]
default = ["std"]
std = []

# Panicking sites are opt-in: each needs a site `#[allow]` +
# `// OK: …` justification (see AGENTS.md > Code Conventions).
[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[dependencies]

# Used only by examples/tp_pc (analysis + presentation +
# pinning live in the example, not the crate — Q1/Q3 in
# notes/design.md are still open).
[dev-dependencies]
hdrhistogram = "7"
core_affinity = "0.8"
